# semita

./: .gitignore  CMakeLists.txt  README.md
fonts/: fnt_default.aseprite  fnt_good_neighbors.aseprite
shader/: shd_default.frag  shd_default.vert
sprites/: spr_cursor.aseprite  spr_flower.aseprite  spr_old_hut.aseprite  spr_snow_fox.aseprite
src/components/: GravityComponent.h  LineCollisionComponent.h  PhysicComponent.h  PlayerControlComponent.h  PositionComponent.h  SpriteComponent.h  WalkComponent.h
src/game/: LevelHome.cpp  LevelHome.h  Main.cpp  SoundId.h
src/glad/: glad.c  glad.h
src/graphics/: AnimationId.h  Aseprite.cpp  Aseprite.h  FontId.h  Graphic.cpp  Graphic.h  Shader.cpp  Shader.h  SpriteId.h
src/systems/: ControlSystem.cpp  ControlSystem.h  DebugSystem.cpp  DebugSystem.h  MovementSystem.cpp  MovementSystem.h  RenderSystem.cpp  RenderSystem.h
